@@ -3,7 +3,7 @@
 @import 'src/styles';
 
 .omv-dashboard-widget-chart {
-  padding: $omv-padding;
+  margin: 0 $omv-padding $omv-padding;
 
   .chart {
     position: relative;
